<resources>
    <string name="app_name">MisLugares</string>
    <string name="editar">Editar</string>
    <string name="_0_5">0/5</string>
    <string name="localizacion">Localizacion</string>
    <string name="mas">MAS</string>
    <string name="eliminar">Eliminar</string>
    <string name="a_adir">Añadir</string>
    <string name="buscar">Buscar</string>
    <string name="nombre">Nombre</string>
    <string name="borrar">Borrar</string>


    <string name="nombreBuscado">Nombre</string>
    <string name="buscado">Buscar</string>
    <string name="resultados">Resultados</string>
    <string name="nombre_item">Nombre</string>
    <string name="localizacion_item">Localizacion</string>
    <string name="telefono_item">Telefono</string>
    <string name="imagenlugar">imagenLugar</string>
    <string name="recyclerview">RecyclerView</string>
    <string name="tipo">Tipo</string>
    <string name="nombreinfo">Nombre</string>
    <string name="localizacioninfo">Localizacion</string>
    <string name="telefonoinfo">Telefono</string>
    <string name="tipoinfo">Tipo</string>
    <string name="urlinfo">url</string>
    <string name="comentarioinfo">Comentario</string>
    <string name="menuinfo">Menu</string>
    <string name="fotoinfo">foto</string>
    <string name="tipoedit">Tipo</string>
    <string name="localizacionedit">Localización</string>
    <string name="nombreedit">Nombre</string>
    <string name="urledit">URL</string>
    <string name="aceptaredit">Aceptar</string>
    <string name="telefonoedit">Teléfono</string>
    <string name="imagenedit">imagenedit</string>
    <string name="comentarioedit">Comentario</string>

    <string name="prueba">prueba</string>
    <string name="url_de_la_foto">URL de la foto</string>
    <string name="favorito">favorito</string>
    <string name="tipoText">Tipo</string>
    <string name="argentino">Argentino</string>
    <string name="bar">Bar</string>
    <string name="casero">Casero</string>
    <string name="c_ctel">Cóctel</string>
    <string name="comida_r_pida">Comida Rápida</string>
    <string name="tapas">Tapas</string>
    <string name="gallego">Gallego</string>
    <string name="italiano">Italiano</string>
    <string name="japones">Japones</string>
    <string name="mexicano">Mexicano</string>
    <string name="sushi">Sushi</string>
    <string name="valenciano">Valenciano</string>
    <string name="vegano">Vegano</string>
    <string name="espacio">.</string>
    <string name="argentino2">argentino</string>
    <string name="bar2">bar</string>
    <string name="casero2">casero</string>
    <string name="valenciano2">valenciano</string>
    <string name="coctel2">coctel</string>
    <string name="comidarapida2">comidaRapida</string>
    <string name="gallego2">gallego</string>
    <string name="italiano2">italiano</string>
    <string name="japones2">japones</string>
    <string name="mexicano2">mexicano</string>
    <string name="sushi2">sushi</string>
    <string name="tapas2">tapas</string>
    <string name="vergano">vergano</string>
    <string name="manual">manual</string>


</resources>