<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    app:cardCornerRadius="65dp"
    app:cardElevation="50dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="169dp">

        <ImageButton
            android:id="@+id/favoritoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="40sp"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/favorito"
            android:src="@drawable/no_favorito"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/foto_item"
            android:layout_width="0dp"
            android:layout_height="108dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/imagenlugar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_background"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/nombre_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="56dp"
            android:text="@string/nombre_item"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/foto_item" />

        <TextView
            android:id="@+id/localizacion_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="100dp"
            android:text="@string/localizacion_item"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/foto_item" />

        <RatingBar
            android:id="@+id/ratingBar_item"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="164dp"
            android:numStars="5"
            android:rating="3.5"
            android:stepSize="0.5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/foto_item"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tipo_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="92dp"
            android:text="@string/tipo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/foto_item" />

        <Space
            android:id="@+id/espacio"
            android:layout_width="51dp"
            android:layout_height="52dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="68dp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nombre_item" />

        <Space
            android:layout_width="23dp"
            android:layout_height="17dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/localizacion_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>